test/error/TypeRangeMaxLimit.fu
public static class Test
{
	public static bool Run()
	{
		0 .. 5000000000 i; //ERROR: Only 32-bit ranges supported
		return true;
	}
}
